    Listen Live.
65. Place search fields on bottom of views, and hide by default. Show when
    Ctrl-F is used for views, and Ctrl-Shift-F for playqueue.
66. When searching in dynamic page, also search rules themselves.
67. For MPD versions 0.17 and above, if Cantata can read a .cue file then it
    will list each track as a separate entry in the artists and albums views.

1.0.3
-----
 1. Dont display codec settings in copy dialog unless we are copying to a
    device, or from an AudioCD.
 2. Save size of Track Organiser, Tag Editor, and ReplayGain dialogs.
 3. Fix consistency of default button in messageboxes between Qt and KDE builds.
 4. Unless using a dark toolbar, use same colour for toolbar menu icon as per
    menu icon in views.
 5. Document how to make a release build.
 6. When searching for artist information, if song's album artist contains
    artist, then use album artist. This is for tracks that have an artist such
    as "abc featuring 123", and album artist is "abc"
 7. Improve comsume icon at larger sizes.
 8. Fix lyrics background when we toggle from showing cover to not showing.
 9. Replace multiple blank lines with single blank line when showing lyrics.
10. Fix AudioCD playback.
11. Remove time remaining from action dialog - its not accurate enough to be
    meaningful.
12. Fix detection of whether streams file is writable or not.

1.0.2.1
-------
1. Re-spin to add Qt SVG iconengine to windows installer.

1.0.2
-----
 1. Show artist name as caption for cover dialog when setting artist images.
 2. Connect 'Set Cover' signal for windows builds.
 3. Fix usage of timers in threads.
 4. Fix non-taglib build.
 5. Fix loading of SVGs in windows build.
 6. Fix cover downloading.
 7. Fix deletion of threads.
 8. Enable online services for windows builds.
 9. Fix 'No such song' warning when removing songs from playqueue.
10. Indicate when streams file is read-only.
11. Better status labels for streams and dynamic pages.

1.0.1
-----